# nofn

./: .dockerignore  .gitignore  Makefile  README.md  generate_summary.py  main.py  main_new.py  pyproject.toml  view_trades.py
config/: config.yaml.example
data/: nofn.db-shm  nofn.db-wal
data/memory/: cases.json
deploy/: UBUNTU_DEPLOYMENT.md  deploy-ubuntu.sh  install-systemd-service.sh  nofn-agent.service  nofn-manager.sh
docker/: Dockerfile  docker-compose.yml
docs/: ACE_ADMIN_GUIDE.md  CLAUDE.md  MEMORY_SUMMARY.md
docs/ace/: ACE_ARCHITECTURE.md
scripts/: build-multiplatform.sh  docker-build.sh  push-multiplatform-to-aws.sh  push-to-aws.sh
src/: config.py
src/ace/: __init__.py  agent.py
src/ace/core/: __init__.py  curator.py  generator.py  reflector.py
src/ace/graph/: __init__.py  nodes.py  state.py
src/ace/models/: __init__.py  context.py  execution.py  reflection.py
src/ace/storage/: __init__.py  context_store.py
src/ace/utils/: __init__.py  embeddings.py  prompt_builder.py
src/adapters/: __init__.py  base.py  binance.py  binance_websocket.py  factory.py  hyperliquid.py  hyperliquid_websocket.py  manager.py  market_data_cache.py
src/agents/: __init__.py
src/agents/hansen/: __init__.py  (+7 more)
src/core/: __init__.py
src/decision/: __init__.py  decision_maker.py
src/engine/: __init__.py  market_snapshot.py  trading_engine.py
src/learning/: __init__.py  agents.py  analyst.py  graph.py  learning_graph.py  learning_graph.py.backup  memory.py  memory_manager.py  state.py  trading_knowledge.py  trading_memory.py  vector_store.py
src/models/: __init__.py  enums.py  market.py  strategy.py  trade_history.py  trade_history_manager.py  trading.py  websocket_events.py
src/prompts/: ace_system.txt  decision_agent.txt  hansen.txt  nofn_v2.txt  turbo.txt
src/strategies/: __init__.py  base.py  factory.py  mtf_momentum.py  turbo.py
src/strategy/: __init__.py  agent.py
src/tools/: __init__.py  analysis_tools.py  performance_tools.py  query_tools.py  trading_tools.py
src/trading/: __init__.py  constants.py  engine.py  models.py  utils.py
src/utils/: __init__.py  config.py  config_loader.py  context_manager.py  human_intervention.py  indicators.py  llm_with_cache.py  logger.py  mtf_calculator.py  turbo_calculator.py
tests/: test_atr_indicator.py  test_binance_algo_cancel.py  test_binance_websocket.py  test_graph_reflection.py  test_graph_summary.py  test_long_term_memory.py  test_new_architecture.py  test_vector_store.py
(+69 files in other folders)
