[project]
name = "nofn"
version = "0.2.0"
description = "NoFn Trading System - Powered by Agno"
requires-python = ">=3.12"
dependencies = [
    "agno>=1.0.0",
    "aiosqlite>=0.21.0",
    "anthropic>=0.40.0",
    "ccxt>=4.5.20",
    "chromadb>=1.3.5",
    "fastapi>=0.115.0",
    "hyperliquid-python-sdk>=0.21.0",
    "loguru>=0.7.3",
    "numpy>=2.3.5",
    "openai>=1.0.0",
    "psutil>=7.1.3",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.0",
    "termcolor>=3.2.0",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.14.6",
]
