[project]
name = "nofn"
version = "0.3.0"
description = "NoFn Trading System - ValueCell Architecture with LangGraph"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "anthropic>=0.40.0",
    "ccxt>=4.5.20",
    "fastapi>=0.115.0",
    "langchain>=1.0.0",
    "langchain-openai>=1.0.0",
    "langgraph>=1.0.0",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "loguru>=0.7.3",
    "numpy>=2.0.0",
    "openai>=1.0.0",
    "pandas>=2.0.0",
    "pandas-stubs~=2.3.3",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "sqlalchemy>=2.0.0",
    "termcolor>=2.4.0",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.14.6",
]
