[project]
name = "nofn"
version = "0.3.0"
description = "NoFn Trading System - ValueCell Architecture with LangGraph"
requires-python = ">=3.12"
dependencies = [
    "agno==2.3.9",
    "aiosqlite>=0.21.0",
    "anthropic>=0.40.0",
    "ccxt==4.5.26",
    "fastapi>=0.115.0",
    "lancedb>=0.25.3",
    "langchain==1.1.3",
    "langchain-openai==1.1.1",
    "langgraph>=1.0.0",
    "langgraph-checkpoint-sqlite==3.0.1",
    "loguru>=0.7.3",
    "numpy>=2.0.0",
    "openai==2.9.0",
    "pandas>=2.0.0",
    "pandas-stubs~=2.3.3",
    "pyarrow>=22.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "sqlalchemy>=2.0.0",
    "termcolor>=2.4.0",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.14.6",
]
